# metrics-aggregator-daemon-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RUST_PORT_PLAN.md
.github/workflows/: ci.yml
config/: config.conf
config/pipelines/: example.conf
docs/: sink_batching_analysis.md
src/: lib.rs  main.rs
src/aggregation/: mod.rs
src/config/: mod.rs
src/model/: mod.rs
src/sinks/: mod.rs
src/sources/: mod.rs
